--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,5 +15,5 @@
 @import './components/footer';
 // @import './components/backdrop';
 
-// @import './components/filters';
-// @import './components/project';
+@import './components/filters';
+@import './components/project';
