--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,33 +1,181 @@
-.header {
-  outline: 2px solid tomato;
+.header_border {
+  border-bottom: 1px solid #ececec;
+}
+
+.header__container {
+  @include flex($jy: space-between)
+  padding: 16px 15px;
+
+  @media screen and (min-width: 768px){
+    padding: 21px 15px;
+  }
+  @media screen and (min-width: 1200px){
+    padding: 24px 15px;
+  }
+}
+
+.header__logo {
+  @media screen and (min-width: 1200px){
+    margin-right: 93px;
+  }
 }
 
 .logo_type {
   color: $main-title-color;
   font-family: 'Raleway', sans-serif;
-  @include font(400, 24px, 1.16);
+  @include font(700, 24px, 1.16);
 
   & .logo__accent {
     color: $accent-color;
   }
+
+  @media screen and (min-width: 1200px){
+    @include font(700, 26px, 1.19);
+  }
 }
 
-.menu {
-  @include flex;
-  padding: 0;
-  border: 0;
+.header__button {
+  border: none;
   background-color: inherit;
+  padding: 0;
+  @include transition(color);
+
+  &:hover,
+  &:focus {
+    color: $accent-color;
+  }
 }
 
-.is-open {
-  .menu__logo-menu {
+.menu__logo-menu {
+  fill: currentColor;
+}
+
+
+@media screen and (max-width: 767.98px){
+  .header__nav, .header__contacts {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px){
+  .header__button {
+    display: none;
+  }
+}
+
+.header__list {
+  @include flex;
+}
+
+.header__link {
+color: $main-title-color;
+  @include font(500, 14px, 1.14, 0.02em)
+
+  @include transition(color);
+
+  &:hover,
+  &:focus {
+    color: $accent-color;
+  }
+}
+
+.header__item {
+  height: 100%;
+  &:not(:last-child){
+    margin-right: 50px;
+  }
+}
+
+.header__contacts {
+  @media screen and (min-width: 1200px){
+    display: flex;
+    margin-left: 305px;
+  }
+}
+
+.header__contact-item {
+  &:not(:last-child){
+    margin-bottom: 10px;
+  }
+  @media screen and (min-width: 1200px){
+    &:not(:last-child){
+      margin-right: 30px;
+      margin-bottom: 0;
+    }
+  }
+}
+
+.header__link-contact {
+  @include flex($jy: flex-start);
+
+  color: $main-text-color;
+  @include font(500, 12px, 1.17, 0.02em)
+
+  @include transition(color);
+
+  &:hover,
+  &:focus {
+    color: $accent-color;
+  }
+
+  @media screen and (min-width: 1200px){
+    @include font(500, 14px, 1.14, 0.02em)
+  }
+}
+
+.header__svg {
+  margin-right: 8px;
+
+  fill: currentColor;
+}
+
+@media screen and (min-width: 1200px){
+  .header__svg_mail {
+    width: 16px;
+    height: 12px;
+  }
+  .header__svg_tel{
+    width: 10px;
+    height: 16px;
+  }
+}
+
+.header__link-current {
+  color: $accent-color;
+}
+
+.header__link {
+  position: relative;
+}
+
+.header__link {
+  &::after {
+    display: inline-block;
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 4px;
+    background-color: $accent-color;
+    border-radius: 2px;
+    bottom: -32px;
+    left: 0;
+
+    @include transition(opacity);
+
     opacity: 0;
   }
-  .menu__logo-close {
+}
+
+.header__link-current {
+  &::after {
     opacity: 1;
+    animation: after-move 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
 
-.menu__logo-close {
-  opacity: 0;
+.header__link {
+  &:hover::after,
+  &:focus::after {
+    opacity: 1;
+  }
 }
