--- a/sass/base/_commons.scss
+++ b/sass/base/_commons.scss
@@ -10,10 +10,14 @@ img {
 }
 
 .container {
-  width: 480px;
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
   margin: auto;
+  
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
 
   @media screen and (min-width: 768px){
     width: 768px;
